# degen-score-engine

./: CLAUDE.md  Cargo.toml  IMPLEMENTATION_SUMMARY.md  README.md  README_TUI.md  basic_test.rs  debug_test.rs  plan.md  protocol_improvements.md  refactor.md  test_scoring.rs  tui_demo.rs
config/: default.toml
examples/: tui_demo.rs
src/: lib.rs  main.rs  tui_main.rs
src/chains/: client.rs  evm.rs  mod.rs  resilience.rs  solana.rs  solana_mock.rs  solana_rpc.rs
src/config/: mod.rs  rpc.rs  settings.rs
src/models/: cache.rs  casino.rs  chain_data.rs  error.rs  metrics.rs  mod.rs  score.rs  user.rs
src/scoring/: algorithm.rs  calculator.rs  mod.rs  simple_calculator.rs  weights.rs
src/tui/: app.rs  event.rs  mod.rs  ui.rs
src/utils/: ens.rs  mod.rs
src/verification/: deposit.rs  mod.rs  signature.rs  verifier.rs
tests/: integration_test.rs
