[package]
name = "degen_scorer"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1.29", features = ["full"] }
futures = "0.3"

# Ethereum/EVM
ethers = { version = "2.0", features = ["rustls"] }

# Solana - commented out due to dependency conflicts
# For production, use a separate microservice or different versions
# solana-client = "1.14"
# solana-sdk = "1.14"
# solana-transaction-status = "1.14"
# spl-token = "3.5"

# HTTP client for APIs
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Cryptography for verification
secp256k1 = "0.27"
hex = "0.4"
bs58 = "0.5"
# Using ring for Ed25519 instead to avoid conflicts
ring = "0.16"

# Configuration
config = "0.14"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4.4", features = ["derive"] }

# TUI
ratatui = "0.26"
crossterm = "0.27"

# Database (for caching)
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite"] }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1.33", features = ["serde-float"] }
bigdecimal = "0.4"
rand = "0.8"
md5 = "0.7"
async-trait = "0.1"
# Solana dependencies - using compatible versions
solana-sdk = { version = "2.3.0", default-features = false }
solana-rpc-client = { version = "2.3.0", default-features = false }
solana-account-decoder = { version = "2.3.0" }
spl-token = { version = "6.0", default-features = false }

[dev-dependencies]
mockall = "0.12"
